fix: Router security